updated web build

--- a/.github/workflows/godot-cli.yml
+++ b/.github/workflows/godot-cli.yml
@@ -1,9 +1,5 @@
 # Workflow to publish Godot HTML5 games to GitHub Pages
 #
-# This script assumes that the project itself is in a subdirectory "project". This 
-# folder structure frees up the root of the repository to be used for non-project
-# files, such as the README, build folder, or raw assets folder.
-#
 # Make sure your project is configured for Web export
 # to the path `build/web`.
 
@@ -16,7 +12,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - main
+      - master
 
 jobs:
   deploy:
@@ -34,16 +30,16 @@ jobs:
           mkdir -v -p ~/.local/share/godot/templates
           mv /root/.local/share/godot/templates/${GODOT_VERSION}.stable ~/.local/share/godot/templates/${GODOT_VERSION}.stable
       - name: Create staging directory
-        run: mkdir -v -p builds/Web
+        run: mkdir -v -p build/web
 
       - name: Build
-        run: godot -v --export "HTML5" ./builds/Web/index.html project/project.godot
+        run: godot -v --export "HTML5" build/web/index.html
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./builds/Web
+          publish_dir: ./build/web
           force_orphan: true
           user_name: 'github-ci[bot]'
           user_email: 'github-actions[bot]@users.noreply.github.com'
