--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -5,7 +5,7 @@ platform="HTML5"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.crt"
 exclude_filter=""
 export_path="build/web/index.html"
 script_export_mode=1
@@ -40,7 +40,7 @@ platform="Mac OSX"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.crt"
 exclude_filter=""
 export_path="builds/MacOSX/GemRush.dmg"
 script_export_mode=1
@@ -105,7 +105,7 @@ platform="Windows Desktop"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.crt"
 exclude_filter=""
 export_path="builds/Windows/.exe"
 script_export_mode=1
