--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="*.crt"
 exclude_filter=""
-export_path="build/web/index.html"
+export_path="builds/Web/index.html"
 script_export_mode=1
 script_encryption_key=""
 
